added last data

--- a/html/avg_elixir.html
+++ b/html/avg_elixir.html
@@ -122,7 +122,7 @@
                               We have limited the decks for which there are at least 100 battles in the dataset, 
                               as in the opinion of the investigators a deck can only be rated well if it has at least 100 battles.
                               The average win rate is around 58%. Decks with 2.8 average elixir have the best win rate with a median of ~64%.
-                              The average elixir costs per deck range from 2.2 to 5.4 elixir. Decks with 2.6, 2.8, 3.4, 4.5, 4.6 and
+                              The average elixir costs per deck range from 2.2 to 5.4 elixir. Decks with 2.6, 2.8, 3.4 and
                               5.4 average elixir have a win rate of over 60% and decks with 4.8 and 5 average elixir have a win rate of under 50%.
                             </p>
                         </div>
