--- a/html/card_combinations.html
+++ b/html/card_combinations.html
@@ -242,10 +242,10 @@
                               To find out which deck types, i.e. which cluster contains the most promising decks, we examine the correlation 
                               between the individual clusters and the win rate of the decks in them. To compare the win rate of the clusters 
                               we compare the median of the win rates of all decks in a cluster. If we look at all decks with at least 100 battles, we get the information 
-                              that cluster 4 contains the most promising decks with a median win rate of 62.68%. If we restrict this further 
+                              that cluster 4 contains the most promising decks with a median win rate of 62.47%. If we restrict this further 
                               to decks with at least 1000 battles, cluster 9 is now the cluster with the best win rate. However, in this case 
                               there is also only one deck in cluster 9. Cluster 4 now has the second best median win rate, 
-                              but with nine different decks.
+                              but with eight different decks.
                             </p>
                         </div>
                         <div id="plot2load" class="clearfix">
@@ -275,14 +275,14 @@
                           </p>
                           <br>
                           <p>
-                            Based on the information when hovering over the meta area, we can see that a total of 245,167 battles were recorded from decks 
-                            with over 100 battles. If we compare this with the 482,006 different battles mentioned on the <a href="data.html">data page</a>
-                            of the cleaned data, we see that almost 236,839 battles were played by decks that had less than 100 battles. For performance 
+                            Based on the information when hovering over the meta area, we can see that a total of 219,134 battles were recorded from decks 
+                            with over 100 battles. If we compare this with the 445,974 different battles mentioned on the <a href="data.html">data page</a>
+                            of the cleaned data, we see that almost 226,840 battles were played by decks that had less than 100 battles. For performance 
                             reasons, we unfortunately had to remove the filter setting of the Treemap to view the data with all recorded decks without 
                             restriction by a minimum number of battles. The size of the leaves and nodes of the treemap are based on the number of fights 
                             added up at the node. The treemap now allows us to see, for example, that in cluster 4, the most promising cluster, the Hog Rider 
                             is the most played win condition. This is then most often played with the Tower Princess as a support card and most often uses 
-                            the Knight and Firecracker as evolutions. With this restriction, there are still 20 different decks played in the cluster, 
+                            the Knight and Firecracker as evolutions. With this restriction, there are still 19 different decks played in the cluster, 
                             all of which have win rates of at least 50%.
                           </p>
                           <p>
@@ -309,11 +309,11 @@
                           </p>
                           <br>
                           <p>
-                            This resulted in, for example, the Graveyard being the best win condition, closely followed by the Three Musketeers. 
-                            However, it is important to note that the Graveyard was played more than 25,000 times, while the Three Musketeers was only 
-                            played just over 2,000 times. It is also interesting to see that the Heal Spirit is the card with the highest win rate, 
+                            This resulted in, for example, the Graveyard being the best win condition, closely followed by the Hog Rider and the Three Musketeers. 
+                            However, it is important to note that the Graveyard was played more than 22,000 times, while the Three Musketeers was only 
+                            played just under 2,000 times. It is also interesting to see that the Heal Spirit is the card with the highest win rate, 
                             although this should come as a relative surprise to those in the know. If you look at the number of battles, you can see that 
-                            the Heal Spirit has only been played just over 1000 times. If we add to this the fact that we are only looking at the best 
+                            the Heal Spirit has only been played just under 1000 times. If we add to this the fact that we are only looking at the best 
                             players in Germany, then it is quite possible that a card achieves a very good win rate in relatively few games, even though the 
                             card may not be that good in general.
                           </p>
