--- a/html/time.html
+++ b/html/time.html
@@ -151,7 +151,7 @@
                             correlation between the time of day and the number of matches won.
                              Therefore, we summarized all weekdays of our data set and summarized 
                              the win rate per hour and day. So if you play Clash Royale and don't
-                              want to lose against top players, avoid Mondays and Sundays. Play on Thursdays.</p>
+                              want to lose against top players, avoid Mondays. Play on Thursdays.</p>
                       </div>
                       <div id="plot3" class="rq-plot left-align">
                           <ul class="nav nav-tabs" id="myTab" role="tablist">
